# whenever_tray

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Info.plist  whenever_tray.cpp  whenever_tray.h
src/images/: about_clock.xpm  icon_about.xpm  icon_svg.h  icon_tray.xpm  tray_clock.xpm
